--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Enums</title>
 </head>
 <body>
+<div class="wrapper">
+    <div class="plus-wrapper">
+        <label id="p-label" for="plus"></label>
+        <button id="plus">Plus</button>
+    </div>
+
+    <div class="minus-wrapper">
+        <label id="m-label" for="minus"></label>
+        <button id="minus">Minus</button>
+    </div>
+</div>
 
 </body>
 </html>
