maybe ready 1 hour 13 minutes

--- a/front/index.html
+++ b/front/index.html
@@ -8,15 +8,15 @@
 <body>
 <div class="wrapper">
     <div class="plus-wrapper">
-        <label id="p-label" for="plus"></label>
+        <label id="p-label" for="plus">0</label>
         <button id="plus">Plus</button>
     </div>
 
     <div class="minus-wrapper">
-        <label id="m-label" for="minus"></label>
+        <label id="m-label" for="minus">0</label>
         <button id="minus">Minus</button>
     </div>
 </div>
-
 </body>
+<script src="script.js"></script>
 </html>
